# openflap

./: .gitignore  CMakeLists.txt  README
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
codelite/: openflap.project  openflap.workspace
deployment/: build_mingw.sh  make_src.sh  openflap  openflap.desktop
src/: config.cpp  config.h  constants.h  filesystem.cpp  filesystem.h  main.cpp  physics.cpp  physics.h  player.cpp  player.h  random.cpp  random.h  resource.rc  sprite.cpp  sprite.h  types.h  vector2.h
